Tweaked sizing to avoid horizontal scrollbars

--- a/style.css
+++ b/style.css
@@ -366,7 +366,6 @@ div label[for=ui-component-toggle__yearly] {
   padding: 50px;
   color: black;
   overflow: hidden;
-  width: 30rem;
   height: 28rem;
 }
 
@@ -1100,7 +1099,7 @@ table.downloads {
   LAYOUT
   ------------------------------------------------------------*/
   
-  .ui-layout-container { width: 95rem; }
+  .ui-layout-container { width: 80%; }
 
   /*------------------------------------------------------------
   COMPONENT
